# IonSolver

./: Cargo.toml  README.md
src/: file.rs  main.rs  mesh.rs  opencl.rs  setup.rs  ui.rs
src/kernels/: graphics_kernels.cl  sim_kernels.cl
src/lbm/: domain.rs  graphics.rs  mod.rs  multi_node.rs  precompute.rs  units.rs
stl/: deeva_disk_magnet.stl  deeva_e_plate1.stl  deeva_e_plate2.stl  deeva_inlet.stl  deeva_quartz_tube.stl  deeva_ring_magnet.stl  disk-magnet.stl  ring-magnet.stl
