[package] 
name = "IonSolver" 
version = "0.1.5" 
edition = "2021" 
 
[dependencies] 
bincode = { version = "1.3.3", optional = true } # used for multi-node synchronization
eframe = { version = "0.31.1", optional = true } # used for gui rendering
egui = { version = "0.31.1", optional = true }   # used for gui rendering
env_logger = "0.11.6"
image = { version = "0.24.7", optional = true }
log = "0.4.26"
mpi = { version = "0.8.0", features = ["user-operations", "derive"], optional = true } # used for multi-node execution
ocl = "0.19.7"
ocl-macros = "0.0.4"
png = "0.17.16"
rayon = "1.8.0"
serde = { version = "1.0.203", features = ["derive"] } # used for multi-node synchronization and config saving/reading
serde_json = "1.0.117" # used for config saving/reading


[features]
gui = ["dep:eframe", "dep:egui", "dep:image"]
multi-node = ["dep:bincode", "dep:mpi"]